--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1" />
 
-  <title>App</title>
+  <title>GoodFood</title>
 </head>
 
 <body>
